Fix: set correct homepage for GitHub Pages

--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,4 @@
-{"homepage": "https://satwik1357.github.io/project",
+{"homepage": "https://satwik1357.github.io/React_portfolio",
 
   "name": "client",
   "version": "0.1.0",
